feat: add new implementation for cyclomatic complexity