@@ -1,7 +1,19 @@
 package org.collection.fm.formulagraph;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.jgrapht.Graph;
+import org.jgrapht.Graphs;
+import org.jgrapht.alg.cycle.DirectedSimpleCycles;
+import org.jgrapht.alg.cycle.JohnsonSimpleCycles;
+import org.jgrapht.alg.cycle.StackBFSFundamentalCycleBasis;
+import org.jgrapht.alg.cycle.TiernanSimpleCycles;
+import org.jgrapht.alg.interfaces.CycleBasisAlgorithm;
+import org.jgrapht.graph.DefaultEdge;
+import org.jgrapht.graph.SimpleGraph;
 import org.prop4j.Node;
 import org.prop4j.Or;
 
@@ -9,144 +21,135 @@ import de.ovgu.featureide.fm.core.analysis.cnf.formula.FeatureModelFormula;
 
 public class ConnectivityGraph {
 
-    private Map<String, Vertex> vertices;
+    private static final Logger LOGGER = LogManager.getLogger();
 
-    public ConnectivityGraph(FeatureModelFormula formula) {
-        this.vertices = new HashMap<>();
-        initializeGraph(formula);
-    }
+    private Graph<String, DefaultEdge> graph;
+    private CycleBasisAlgorithm.CycleBasis<String, DefaultEdge> cycleBasis;
+    private Map<DefaultEdge, Integer> edgeIDMap;
+    private FeatureModelFormula formula;
 
-    public Vertex getVertex(String variable) {
-        return vertices.get(variable);
-    }
-
-    public void addVertex(String variable) {
-        vertices.put(variable, new Vertex(variable));
-    }
 
     private void initializeGraph(FeatureModelFormula formula) {
-        Node cnf = formula.getCNFNode(); 
-        for (Node clause : cnf.getChildren()) {
-            if (Thread.currentThread().isInterrupted()) break;
-            handleClause(clause);
+        if (! Objects.equals(formula, this.formula)) {
+            this.graph = new SimpleGraph<>(DefaultEdge.class);
+            Node cnf = formula.getCNFNode();
+            for (Node clause : cnf.getChildren()) {
+                if (Thread.currentThread().isInterrupted()) break;
+                handleClause(clause);
+            }
+            edgeIDMap = HashMap.newHashMap(graph.edgeSet().size());
+            int i = 0;
+            for (DefaultEdge e : graph.edgeSet()) {
+                edgeIDMap.put(e, i);
+                i++;
+            }
         }
     }
-    
+
     private void handleClause(Node set) {
         if (set.getChildren().length < 2) {
             return;
         }
         if (!(set instanceof Or)) {
-            System.out.println("Not CNF");
+            LOGGER.error("NOT CNF");
             return;
         }
         for (int i = 0; i < set.getChildren().length - 1; i++) {
-            for (int j = i+1; j < set.getChildren().length; j++) {
+            for (int j = i + 1; j < set.getChildren().length; j++) {
                 if (Thread.currentThread().isInterrupted()) return;
-                handlePair((String) set.getChildren()[i].getLiterals().get(0).var, (String) set.getChildren()[j].getLiterals().get(0).var);
+                Graphs.addEdgeWithVertices(graph, (String) set.getChildren()[i].getLiterals().getFirst().var, (String) set.getChildren()[j].getLiterals().getFirst().var);
             }
         }
     }
-    
-    private void handlePair(String a, String b) {
-        if (getVertex(a) == null) {
-            addVertex(a);
-        }
-        if (getVertex(b) == null) {
-            addVertex(b);
-        }
-        getVertex(a).addNeighbor(b);
-        getVertex(b).addNeighbor(a);
-    }
 
-    public int getNumberOfEdges() {
-        int edges = 0;
-        for (Vertex vertex : vertices.values()) {
-            if (Thread.currentThread().isInterrupted()) return -1;
-            edges += vertex.getNumberOfNeighbors();
-        }
-
-        return edges / 2;
+    public long getNumberOfEdges(FeatureModelFormula formula) {
+        initializeGraph(formula);
+        return graph.edgeSet().size();
     }
 
     // performs a dfs to compute the number of cycles
-    public int getNumberOfCycles() {
-        int cycleCounter = 0;
-        Deque<String> stack = new ArrayDeque<>();
-        String start =  vertices.values().iterator().next().getVariable();
-        stack.push(start);
-        while (!stack.isEmpty() && !Thread.currentThread().isInterrupted()) {
-            Vertex current = getVertex(stack.pop());
-            current.setVisited(true);
-            for (String dest : current.getAdjacencyList()) {
-                if (Thread.currentThread().isInterrupted()) return -1;
-                Vertex destV = getVertex(dest);
-                if (stack.contains(dest) && !destV.isVisited()) { // cycle found
-                    cycleCounter++;
-                } else if (!destV.isVisited()) {
-                    stack.push(dest);
+    // Algorithm from https://dl.acm.org/doi/epdf/10.1145/321541.321545 or http://dspace.mit.edu/bitstream/handle/1721.1/68106/FTL_R_1982_07.pdf, page 14 (16 in PDF)
+    public long getNumberOfCycles(FeatureModelFormula formula) {
+        initializeGraph(formula);
+        if (cycleBasis == null) computeCycleBasis();
+
+        List<BitSet> fundamentalCycles = generateVectorRepresentation(cycleBasis.getCycles());
+
+        //1
+        Set<BitSet> S = new HashSet<>();
+        S.add(fundamentalCycles.getFirst());
+
+        Set<BitSet> Q = new HashSet<>();
+        Q.add(fundamentalCycles.getFirst());
+        HashSet<BitSet> R = new HashSet<>();
+        HashSet<BitSet> RStar = new HashSet<>();
+
+        for (int i = 1; i < getNumberOfIndependentCycles(formula); i++) { //6
+            BitSet currentCycle = fundamentalCycles.get(i);
+
+            //2
+            for (BitSet T : Q) {
+                BitSet copyT = (BitSet) T.clone();
+                copyT.xor(currentCycle);
+                if (T.intersects(currentCycle)) R.add(copyT);
+                else RStar.add(copyT);
+            }
+
+            //3
+            var iterator = R.iterator();
+            while (iterator.hasNext()) {
+                BitSet next =  iterator.next();
+                if (R.stream().anyMatch(e -> checkSubset(e, next))) {
+                    iterator.remove();
+                    RStar.add(next);
                 }
             }
+
+            //4
+            S.addAll(R);
+            S.add(currentCycle);
+
+            //5
+            Q.addAll(R);
+            Q.addAll(RStar);
+            Q.add(currentCycle);
         }
-        return cycleCounter;
+
+        return S.size();
     }
+
+    private boolean checkSubset(BitSet subset, BitSet set) {
+        if (subset.equals(set)) return false;
+        BitSet subCopy = (BitSet) subset.clone();
+        subCopy.xor(set);
+        subCopy.or(set);
+        return subCopy.equals(set);
+    }
+
+    private List<BitSet> generateVectorRepresentation(Set<List<DefaultEdge>> fundamentalCycles){
+        List<BitSet> list = new ArrayList<>();
+        for (List<DefaultEdge> fundamentalCycle : fundamentalCycles) {
+            BitSet bitSet = new BitSet(graph.edgeSet().size());
+            for (DefaultEdge edge : fundamentalCycle) {
+                bitSet.set(edgeIDMap.get(edge));
+            }
+            list.add(bitSet);
+        }
+        return list;
+    }
+
 
     // computes the number of independent cycles
     // i.e. the vertices in each cycle are not a subset of another one
-    public int getNumberOfIndependentCycles() {
-        Deque<String> stack = new ArrayDeque<>();
-        if (Thread.currentThread().isInterrupted()) return -1;
-        String start =  vertices.values().iterator().next().getVariable();
-        List<List<String>> cycleLog = new ArrayList<>();
-        stack.push(start);
-
-        // key: child, value: parent
-        HashMap<String, String> parentMapping = new HashMap<>();
-        parentMapping.put(start, null);
-        while (!stack.isEmpty() && !Thread.currentThread().isInterrupted()) {
-            String current = stack.pop();
-            Vertex currentV = getVertex(current);
-            currentV.setVisited(true);
-            for (String dest : currentV.getAdjacencyList()) {
-                if (Thread.currentThread().isInterrupted()) return -1;
-                parentMapping.put(dest, current);
-                Vertex destV = getVertex(dest);
-                if (stack.contains(dest) && !destV.isVisited()) { // cycle found
-                    // get the path beginning at the root of the dfs
-                    List<String> pathLog = new ArrayList<>();
-                    pathLog.add(dest);
-                    String next = current;
-                    while (next != null && !pathLog.contains(next)) {
-                        if (Thread.currentThread().isInterrupted()) return -1;
-                        pathLog.add(next);
-                        next = parentMapping.get(next);
-                    }
-
-                    // check for not independent cycles before inserting
-                    boolean independent = true;
-                    HashSet<String> pathLogSet = new HashSet<>(pathLog);
-                    for(List<String> elemList :  cycleLog) {
-                        if (Thread.currentThread().isInterrupted()) return -1;
-                        HashSet<String> elem = new HashSet<>(elemList);
-                        if (elem.size() >= pathLog.size()) {
-                            if (elem.containsAll(pathLog)) {
-                                independent = false;
-                                break;
-                            }
-                        } else {
-                            if (pathLogSet.containsAll(elem)) {
-                                independent = false;
-                                break;
-                            }
-                        }
-                    }
-
-                    if (independent) {cycleLog.add(pathLog);}
-                } else if (!destV.isVisited()) {
-                    stack.push(dest);
-                }
-            }
-        }
-        return cycleLog.size();
+    public long getNumberOfIndependentCycles(FeatureModelFormula formula) {
+        initializeGraph(formula);
+        if (cycleBasis == null) computeCycleBasis();
+        return cycleBasis.getCycles().size();
     }
+
+    private void computeCycleBasis(){
+        StackBFSFundamentalCycleBasis<String, DefaultEdge> computer = new StackBFSFundamentalCycleBasis<>(graph);
+        cycleBasis = computer.getCycleBasis();
+    }
+
 }
